--- a/src/view/HomeManager.fxml
+++ b/src/view/HomeManager.fxml
@@ -3,6 +3,9 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -16,7 +19,16 @@
                <children>
                   <Pane prefHeight="110.0" prefWidth="300.0" style="-fx-background-color: #2A1C42;">
                      <children>
-                        <FontAwesomeIconView fill="WHITE" glyphName="VK" layoutX="108.0" layoutY="75.0" size="60" />
+                        <ImageView fitHeight="54.0" fitWidth="50.0" layoutX="63.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/logo.png" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="119.0" layoutY="41.0" prefHeight="50.0" prefWidth="117.0" text="VietFood" textFill="WHITE">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
                      </children>
                   </Pane>
                </children>
