--- a/src/view/Login.fxml
+++ b/src/view/Login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -50,11 +51,11 @@
                               <Font size="18.0" />
                            </font>
                         </TextField>
-                        <TextField fx:id="txtPassWord" layoutX="63.0" layoutY="216.0" prefHeight="39.0" prefWidth="272.0" promptText="Password">
+                        <PasswordField fx:id="txtPassWord" layoutX="63.0" layoutY="216.0" prefHeight="39.0" prefWidth="272.0" promptText="Password">
                            <font>
                               <Font size="18.0" />
                            </font>
-                        </TextField>
+                        </PasswordField>
                         <Button fx:id="btnSignin" layoutX="148.0" layoutY="285.0" mnemonicParsing="false" onAction="#signIn" prefHeight="39.0" prefWidth="103.0" styleClass="button-sign-in" text="Sign in" />
                      </children>
                   </Pane>
