--- a/src/view/ItemBanDatDetail.fxml
+++ b/src/view/ItemBanDatDetail.fxml
@@ -4,6 +4,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -99,14 +102,21 @@
          </children>
       </Pane>
       <Separator layoutX="35.0" layoutY="137.0" prefHeight="16.0" prefWidth="743.0" />
-      <Pane fx:id="txtTTBanAn" layoutX="35.0" layoutY="177.0" prefHeight="129.0" prefWidth="374.0" />
-      <Label layoutX="45.0" layoutY="153.0" text="Thông tin bàn">
+      <TextArea fx:id="txtBanAn" editable="false" layoutX="35.0" layoutY="173.0" prefHeight="85.0" prefWidth="396.0" wrapText="true" />
+      <Label layoutX="45.0" layoutY="148.0" text="Thông tin bàn">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <Pane fx:id="txtTTMonAn" layoutX="32.0" layoutY="341.0" prefHeight="129.0" prefWidth="374.0" />
-      <Label layoutX="47.0" layoutY="316.0" text="Thông tin món ăn">
+      <TableView fx:id="lvMonAn" layoutX="35.0" layoutY="289.0" prefHeight="179.0" prefWidth="396.0">
+        <columns>
+          <TableColumn fx:id="tenMon" prefWidth="148.0" text="Tên món" />
+          <TableColumn fx:id="soLuong" prefWidth="57.0" text="Số lượng" />
+            <TableColumn fx:id="donGia" prefWidth="83.0" text="Đơn giá" />
+            <TableColumn fx:id="tongGia" prefWidth="100.0" text="Tổng" />
+        </columns>
+      </TableView>
+      <Label layoutX="47.0" layoutY="264.0" text="Thông tin món ăn">
          <font>
             <Font size="16.0" />
          </font>
